syntax = "proto2";

package engine;

message EngineRequest {
    optional string     TraceId = 1;
    required string     UserId = 2;
    repeated int32      DocIdList = 3;
    repeated int32      FromList = 4;
}

message RspInfo {
    required int32      DocId = 1;
    required float      DocScore = 2;
}

message EngineResponse {
    required int32      ErrorId = 1;
    optional string     ErrorMsg = 2;
    repeated RspInfo    RspInfoList = 3;
}

service Engine {
    rpc Handler (EngineRequest) returns (EngineResponse);
};

